# 3DViewer_Cpp

./: README.md
src/: CMakeLists.txt  Makefile  main.cc  man_ru.texi  test.cc
src/controller/: controller.cc  controller.h
src/model/: model.cc  model.h
src/view/: command.h  mainwindow.cc  mainwindow.h  mainwindow.ui  strategy.h  widget.cc  widget.h
